# backend

./: .envrc  .gitignore  README.md  TODO.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  utils.py
analytics/: .gitignore  analyze.py  requirements.txt
ansible/playbooks/files/etc/php/fpm/: pool-template.conf
ansible/playbooks/helpers/: copy_structure.yml
ansible/playbooks/provision/: _flarum.yml  _mediawiki.yml  _wordpress.yml  main.yml  mediawiki.yml  wordpress.yml
ansible/playbooks/removal/: _backup.yml  _cleanup.yml  main.yml
ansible/project/: backup_main.yml  backup_system_main.yml  provision_main.yml  removal_main.yml  restore_main.yml  sync_files_main.yml
ansible/project/backup/: _backup.yml  _cleanup.yml  _prune.yml  _restore.yml
ansible/project/files/: README_EXPORT.md
ansible/project/helpers/: copy_structure.yml  render_config.yml
ansible/project/provision/: _flarum.yml  _mediawiki.yml  _wordpress.yml  main.yml
ansible/project/removal/: main.yml
ansible/project/vars/: flarum_files.yml  mediawiki_files.yml  wordpress_files.yml
api/v1/: __init__.py  account.py  auth.py  settings.py  signup.py  sites.py  webhook.py
api/v1/service_settings/: __init__.py  mediawiki.py
cli/: __init__.py  backup_site.py  backup_system.py  cleanup_sites.py  collect_stats.py  create_site.py  link_domain.py  list_sites.py  make_donor.py  remove_site.py  restore_site.py  site_info.py  sync_nginx_maps.py  upgrade.py  upgrade_site.py
database/: models.py  session.py
database/migrations/: README.md  env.py  script.py.mako
database/migrations/versions/: 1b52ee60ee3d_initial_migration.py  1ee98f5c3794_add_site_stats.py  2af8d64b9b12_donated_amount_default.py  3e8ca0fd3607_nullable_installed_at.py  acec4611506e_adjust_site_schema_types.py
site_manager/: __init__.py  ansible_runner.py  custom_domains.py  flarum.py  mediawiki.py  runner.py  tenant_config.py  wordpress.py
tests/: README.md  conftest.py  stress.sh
tests/api/v1/: test_index.py
tests/database/: test_db_exception.py  test_site_db.py  test_site_methods.py
tests/integration/: __init__.py  conftest.py  test_tenant_lifecycle.py
tests/unit/: conftest.py
tests/unit/api/v1/: test_index.py
tests/unit/database/: test_db_exception.py  test_site_methods.py
tests/unit/utils/: test_auth.py  test_validate_tag.py
tests/utils/: test_auth.py  test_validate_password.py  test_validate_tag.py
utils/: __init__.py  auth.py  backup.py  cmd.py  health.py  ip.py  mail.py  turnstile.py
(+7 files in other folders)
