[project]
name = "nocost-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic[email]",
    "python-multipart",
    "ansible",
    "alembic",
    "aiomysql",
    "dnspython",
    "sqlalchemy[asyncio]",
    "bcrypt",
    "httpx",
    "PyJWT",
    "uvicorn",
    "gunicorn",
    "ansible-runner",
    "python-dotenv",
    "geoip2",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "aiosqlite",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
backupsite = "cli.backup_site:main"
createsite = "cli.create_site:main"
removesite = "cli.remove_site:main"
restoresite = "cli.restore_site:main"
makedonor = "cli.make_donor:main"
siteinfo = "cli.site_info:main"
upgradesite = "cli.upgrade:main"

[tool.setuptools.packages.find]
where = ["."]
